added various datasets

--- a/index.html
+++ b/index.html
@@ -289,8 +289,11 @@ hr {
                      <li><a href="https://github.com/jasklabs/blackhat2017">Data for a Black Hat 2017 Handout</a> - Various types of data (network, host, etc...) for different use cases (e.g. Remote Exploitation, Spear Phishing, Ransomware, WebShell) [License Info: Apache 2]</li>
                      <li><a href="https://github.com/jzadeh/aktaion">Aktion Open Source Exploit Detection Tool</a> - Variety of different kinds of data centered around exploit detection [License Info: Apache 2]</li>
                      <li><a href="https://github.com/jzadeh/aktaion2">Atkion V2 Open Source Exploit Detection Tool</a> - Variety of different kinds of data centered around exploit detection [License Info: Apache 2]</li>
-                     <li><a href="https://github.com/vs-uulm/2017-SUEE-data-set">2017-SUEE-data-set</a> PCAP files that show various HTTP attack (slowloris, slowhttptest, slowloris-ng) [License Info: Unknown]</li>
+                     <li><a href="https://github.com/vs-uulm/2017-SUEE-data-set">2017-SUEE-data-set</a> - PCAP files that show various HTTP attack (slowloris, slowhttptest, slowloris-ng) [License Info: Unknown]</li>
                      <li><a href="http://archive.ics.uci.edu/ml/datasets/Website+Phishing">UCI ML Repository - Website Phishing Data Set</a> A collection of Phishing Websites as well as legitimate ones. [License Info: Listed on site]</li>
+                     <li><a href="https://plg.uwaterloo.ca/~gvcormac/treccorpus07/">2007 TREC Public SPAM Corpus</a> - SPAM Corpus [License Info: Listed on site]</li>
+                     <li><a href="https://github.com/faizann24/Fwaf-Machine-Learning-driven-Web-Application-Firewall">ML Driven Web Application Firewall</a> - Machine learning driven web application firewall to detect malicious queries with high accuracy (URL data) [License Info: Unknown]</li>
+                     <li><a href="https://www.westpoint.edu/crc/SitePages/DataSets.aspx">West Point NSA Data Sets</a> - Snort IDS, DNS Service, and Web Server logs. [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
@@ -308,6 +311,7 @@ hr {
                      <li><a href="http://malwaredb.malekal.com/">Malware DB by Malekal</a> - A list of malicious files, complete with sample link and some AV results [License Info: Unknown]</li>
                      <li><a href="https://www.sec.cs.tu-bs.de/~danarp/drebin/">Drebin Dataset</a> - Android malware, must submit proof of who you are for access. [License Info: Listed on site]</li>
                      <li><a href="https://github.com/endgameinc/ember">EMBER Dataset</a> - Features and labels from 1.1 million benign/malicious PE files with trained model. [License Info: AGPL-3.0]</li>
+                     <li><a href="https://github.com/marcoramilli/MalwareTrainingSets">MalwareTrainingSets</a> - JSON describing several intrusion sets/threat actors [License Info: Listed on GitHub]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
@@ -325,7 +329,7 @@ hr {
                      <li><a href="https://www.cert.org/insider-threat/tools/index.cfm">CERT Insider Threat Tools</a> - "These datasets provide both synthetic background data and data from synthetic malicious actors" [License Info: Unknown]</li>
                      <li><a href="https://www.unsw.adfa.edu.au/australian-centre-for-cyber-security/cybersecurity/ADFA-IDS-Datasets/">ADFA IDS Datasets</a> - The datasets cover both Linux and Windows; they are designed for evaluation by system call based HIDS. [License Info: Listed on site]</li>
                      <li><a href="https://github.com/konstantinberlin/malware-windows-audit-log-detection">Workshop on AI and Security</a> - Anonomized Windows Audit Logs. [License Info: Apache 2.0]</li>
-                     <li><a href="https://github.com/JonathanPhillips/Threat_Research">Threat Research</a> Honeypot data [License Info: Unknown]</li>
+                     <li><a href="https://github.com/JonathanPhillips/Threat_Research">Threat Research</a> - Honeypot data [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
