--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@ hr {
                      <li><a href="http://cybercrime-tracker.net/zbox.php">CyberCrime ZbotScan</a> - List of hashes associated with various Zbot variants [License Info: Unknown]</li>
                      <li><a href="https://www.abuse.ch/">abuse.ch trackers</a> - Trackers for ransomeware, ZeuS, SSL Blacklist, SpyEye, Palevo, and Feodo [License Info: Unknown]</li>
                      <li><a href="https://github.com/pan-unit42/iocs">Unit 42 Indicators</a> - Indicators from the Unit 42 reports [License Info: Unknown]</li>
+                     <li><a href="https://threatfeeds.io/">Threat Feeds</a> - Threat feed aggregator [License Info: Various]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
