Updated description datatypes and added columns
Updated datatypes and counts for status, direction, client and server.
Addded 4 unknown blank fields at end of row.

--- a/Datasets Description/Network/ssh.html
+++ b/Datasets Description/Network/ssh.html
@@ -53,35 +53,63 @@
     </tr>
     <tr>
       <th>status</th>
-      <td>float64</td>
-      <td>0</td>
-      <td>0</td>
+      <td>object</td>
       <td>7143</td>
+      <td>3</td>
+      <td>0</td>
     </tr>
     <tr>
       <th>direction</th>
-      <td>float64</td>
-      <td>0</td>
-      <td>0</td>
+      <td>object</td>
       <td>7143</td>
+      <td>1</td>
+      <td>0</td>
     </tr>
     <tr>
       <th>client</th>
-      <td>float64</td>
-      <td>0</td>
-      <td>0</td>
-      <td>7143</td>
+      <td>object</td>
+      <td>3998</td>
+      <td>20</td>
+      <td>3145</td>
     </tr>
     <tr>
       <th>server</th>
-      <td>float64</td>
-      <td>0</td>
-      <td>0</td>
+      <td>object</td>
       <td>7143</td>
+      <td>9</td>
+      <td>0</td>
     </tr>
     <tr>
       <th>resp_size</th>
       <td>float64</td>
+      <td>0</td>
+      <td>0</td>
+      <td>7143</td>
+    </tr>
+    <tr>
+      <th>unknown1</th>
+      <td>object</td>
+      <td>0</td>
+      <td>0</td>
+      <td>7143</td>
+    </tr>
+    <tr>
+      <th>unknown2</th>
+      <td>object</td>
+      <td>0</td>
+      <td>0</td>
+      <td>7143</td>
+    </tr>
+    <tr>
+      <th>unknown3</th>
+      <td>object</td>
+      <td>0</td>
+      <td>0</td>
+      <td>7143</td>
+    </tr>
+    <tr>
+      <th>unknown4</th>
+      <td>object</td>
       <td>0</td>
       <td>0</td>
       <td>7143</td>
