--- a/index.html
+++ b/index.html
@@ -18,67 +18,7 @@
         <link rel="apple-touch-icon" sizes="72x72" href="/bootstrap/img/apple-touch-icon-72x72.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/bootstrap/img/apple-touch-icon-114x114.png">
 -->
-
-
-        <!-- CSS code from Bootply.com editor -->
-
-        <style type="text/css">
-            /* Sticky footer styles
--------------------------------------------------- */
-
-html,
-body {
-  height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
-}
-
-/* Wrapper for page content to push down footer */
-#wrap {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  /* Negative indent footer by its height */
-  margin: 0 auto -60px;
-  /* Pad bottom by footer height */
-  padding: 0 0 60px;
-}
-
-/* Set the fixed height of the footer here */
-#footer {
-  height: 60px;
-  background-color: #f5f5f5;
-}
-
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-#wrap > .container {
-  padding: 60px 15px 0;
-}
-.container .credit {
-  margin: 20px 0;
-}
-
-#footer > .container {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-code {
-  font-size: 80%;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-bottom: 1px solid #eee;
-    margin: 1em 0;
-    padding: 0;
-}
-
-        </style>
+         <link rel="stylesheet" href="css/style.css">
     </head>
 
     <!-- HTML code from Bootply.com editor -->
