--- a/index.html
+++ b/index.html
@@ -304,7 +304,12 @@ hr {
                      <li><a href="https://github.com/faizann24/Fwaf-Machine-Learning-driven-Web-Application-Firewall">ML Driven Web Application Firewall</a> - Machine learning driven web application firewall to detect malicious queries with high accuracy (URL data) [License Info: Unknown]</li>
                      <li><a href="https://www.westpoint.edu/crc/SitePages/DataSets.aspx">West Point NSA Data Sets</a> - Snort IDS, DNS Service, and Web Server logs. [License Info: Unknown]</li>
                      <li><a href="https://web.cs.hacettepe.edu.tr/~selman/phish-iris-dataset/">Phish-IRIS</a> - A small scale multi-class phishing web page screenshots archive [License Info: Listed on site]</li>
-                     <!--<li><a href=""></a> [License Info: ]</li>-->
+                     <li><a href="https://dgarchive.caad.fkie.fraunhofer.de/">DGArchive</a> - Samples of DGA domains from various types of malware. [License Info: Contact for access/info]</li>
+                     <li><a href="https://data.netlab.360.com/dga/">Netlab360 DGA Domains</a> - Samples of DGA domains from various types of malware. License Info: Unknown]</li>
+                     <li><a href="https://ak.quantcast.com/quantcast-top-sites.zip">Quantcast Top Sites</a> - Most popular sites on the Internet according to Quantcast. [License Info: Unknown]</li>
+                     <li><a href="https://www.domcop.com/files/top/top10milliondomains.csv.zip">DomCop Top 1M</a> - Top One Million sites according to DomCop. [License Info: Unknown]</li>
+                     <li><a href="https://github.com/maravento/blackweb">Blackweb Domains</a> - A project that aims to categorize as many domains as possible, also provies a whitelist. [License Info: Unknown]</li
+                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
                <li><a id="3p_malware"></a>Malware
