--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                      <li><a href="https://www.unsw.adfa.edu.au/australian-centre-for-cyber-security/cybersecurity/ADFA-IDS-Datasets/">ADFA IDS Datasets</a> - The datasets cover both Linux and Windows; they are designed for evaluation by system call based HIDS. [License Info: Listed on site]</li>
                      <li><a href="https://github.com/konstantinberlin/malware-windows-audit-log-detection">Workshop on AI and Security</a> - Anonomized Windows Audit Logs. [License Info: Apache 2.0]</li>
                      <li><a href="https://github.com/JonathanPhillips/Threat_Research">Threat Research</a> - Honeypot data [License Info: Unknown]</li>
+                     <li><a href="https://github.com/sbousseaden/EVTX-ATTACK-SAMPLES">EVTX Attack Samples</a> - Windows events samples associated to specific attack and post-exploitation techniques"></a> [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
