--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                      <li><a href="https://data.netlab.360.com/dga/">Netlab360 DGA Domains</a> - Samples of DGA domains from various types of malware. License Info: Unknown]</li>
                      <li><a href="https://ak.quantcast.com/quantcast-top-sites.zip">Quantcast Top Sites</a> - Most popular sites on the Internet according to Quantcast. [License Info: Unknown]</li>
                      <li><a href="https://www.domcop.com/files/top/top10milliondomains.csv.zip">DomCop Top 1M</a> - Top One Million sites according to DomCop. [License Info: Unknown]</li>
-                     <li><a href="https://github.com/maravento/blackweb">Blackweb Domains</a> - A project that aims to categorize as many domains as possible, also provies a whitelist. [License Info: Unknown]</li
-                      <!--<li><a href=""></a> [License Info: ]</li>-->
+                     <li><a href="https://github.com/maravento/blackweb">Blackweb Domains</a> - A project that aims to categorize as many domains as possible, also provies a whitelist. [License Info: Unknown]</li>
+                     <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
                <li><a id="3p_malware"></a>Malware
