--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
                      <li><a href="http://bigdata.ise.bgu.ac.il/sherlock/index.html#/">SherLock Dataset</a> - Smartphone dataset with software and hardware sensor information surrounding mobile malware [License Info: 3 year full access, listed on site]</li>
                      <li><a href="https://github.com/foospidy/payloads">payloads</a> - A collection of web attack payloads. [License Info: Unknown]</li>
                      <li><a href="http://www.azsecure-data.org/get-data.html">AZSecure Intelligence and Security Informatics Data Sets</a> - various data sets around mostly web data [License Info: <a href="http://www.azsecure-data.org/get-data.html">Citing</a>]</li>
+                     <li><a href="https://github.com/hgascon/security-datasets/blob/master/README.md">security-datasets</a> - A collection of resources for security data [License Info: Various]</li>
+                     <li><a href="https://github.com/hunters-forge/mordor">Mordor Gates</a> - Pre-recorded security events generate by simulated adversarial techniques.  [License Info: GPLv3]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                <li><a id="3p_network"></a>Network
