--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                      <li><a href="https://github.com/hunters-forge/mordor">Mordor Gates</a> - Pre-recorded security events generate by simulated adversarial techniques.  [License Info: GPLv3]</li>
                      <li><a href="https://github.com/misterch0c/what_is_this_c2">"What is this panel again?"</a> - Screenshots of various malware control panels. [License Info: Unknown]</li>
                      <li><a href="https://github.com/bodacea/misinfolinks">Awesome Misinformation</a> - A curated list of awesome misinformation. [License Info: MIT]</li>
+                     <li><a href="https://github.com/0xsha/sweetie-data">Sweetie data</a> - a collection of honeypot data (network and files). [License Info: MIT]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                <li><a id="3p_network"></a>Network
