added feed and malware links

--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
                      <li><a href="http://vxheaven.org/faq.php#whole">Vx Heaven</a> - sorted by AV set of virus samples (available via BitTorrent) [License Info: Unknown]</li>
                      <li><a href="https://techhelplist.com/spam-list">TechHelpList SPAM List</a> - Samples of SPAM messages and associated threat that was delivered in addition to other rich information [License Info: Unknown]</li>
                      <li><a href="http://www.malshare.com/index.php">MalShare</a> - A community driven public malware repository.  [License Info: <a href = "http://www.malshare.com/tos.php">TOS</a>]</li>
+                     <li><a href="https://urlhaus-api.abuse.ch/downloads/">URLhaus</a> - Daily malware batches. [License Info: CC-0]</li>
+                     <li><a href="https://mb-api.abuse.ch/downloads/">MALWAREbazzar</a> - Daily malware batches. [License Info: CC-0]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
@@ -327,6 +329,7 @@
                      <li><a href="https://www.abuse.ch/">abuse.ch trackers</a> - Trackers for ransomeware, ZeuS, SSL Blacklist, SpyEye, Palevo, and Feodo [License Info: Unknown]</li>
                      <li><a href="https://github.com/pan-unit42/iocs">Unit 42 Indicators</a> - Indicators from the Unit 42 reports [License Info: Unknown]</li>
                      <li><a href="https://threatfeeds.io/">Threat Feeds</a> - Threat feed aggregator [License Info: Various]</li>
+                     <li><a href="https://github.com/drb-ra/C2IntelFeeds">C2IntelFeeds</a> - Automatically created C2 feeds, currently VPNs and various C2. [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
