added malware and network sites

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
                      <li><a href="https://ak.quantcast.com/quantcast-top-sites.zip">Quantcast Top Sites</a> - Most popular sites on the Internet according to Quantcast. [License Info: Unknown]</li>
                      <li><a href="https://www.domcop.com/files/top/top10milliondomains.csv.zip">DomCop Top 1M</a> - Top One Million sites according to DomCop. [License Info: Unknown]</li>
                      <li><a href="https://github.com/maravento/blackweb">Blackweb Domains</a> - A project that aims to categorize as many domains as possible, also provies a whitelist. [License Info: Unknown]</li>
+                     <li><a href="https://zenodo.org/record/3241445#.YVesmZrMKWZ">Charles University SIS Access Log Dataset</a> - The package contains an anonymized server log collected on a live installation of a student information system run by Charles University between May and November 2018 [License Info: Creative Commons Attribution 4.0 International]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
@@ -272,6 +273,9 @@
                      <li><a href="https://www.sec.cs.tu-bs.de/~danarp/drebin/">Drebin Dataset</a> - Android malware, must submit proof of who you are for access. [License Info: Listed on site]</li>
                      <li><a href="https://github.com/endgameinc/ember">EMBER Dataset</a> - Features and labels from 1.1 million benign/malicious PE files with trained model. [License Info: AGPL-3.0]</li>
                      <li><a href="https://github.com/marcoramilli/MalwareTrainingSets">MalwareTrainingSets</a> - JSON describing several intrusion sets/threat actors [License Info: Listed on GitHub]</li>
+                     <li><a href="https://github.com/MalwareSamples/Malware-Feed">Malware-Feed</a> - An ongoing and updated archive of files that we collect which are associated with specific public malicious threat reports.[License Info: MIT]</li>
+                     <li><a href="https://github.com/Virus-Samples/Malware-Sample-Sources">Malware Sample Sources</a> - A Collection of Malware Sample Repositories [License Info: Unknown]</li>
+                     <li><a href="https://whyisyoung.github.io/BODMAS/">Blue Hexagon Open Dataset for Malware AnalysiS</a> - A dataset containing timestamped malware samples and well-curated family information for research purposes. [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
